--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div id="calculator">
-        <input type="number" inputmode="numeric">
+        <input type="number" inputmode="numeric" value="0">
         <div id="keyboard">
             <button>(</button>
             <button>)</button>
             <button>%</button>
             <button>AC</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>/</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>*</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button>÷</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button>×</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
             <button>-</button>
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
+            <button class="number">0</button>
+            <button class="number">.</button>
+            <button class="equal-sign">=</button>
             <button>+</button>
         </div>
     </div>
