--- a/index.html
+++ b/index.html
@@ -10,30 +10,31 @@
 
 <body>
     <div id="calculator">
-        <input type="number" inputmode="numeric" value="0">
+        <input id="calc-screen" value="0">
         <div id="keyboard">
-            <button>(</button>
-            <button>)</button>
-            <button>%</button>
-            <button>AC</button>
+            <button class="operator">(</button>
+            <button class="operator">)</button>
+            <button class="operator">%</button>
+            <button id="all-cancel">AC</button>
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button>÷</button>
+            <button class="operator" id="division">÷</button>
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button>×</button>
+            <button class="operator" id="multiplication">×</button>
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
-            <button>-</button>
+            <button class="operator" id="minus">-</button>
             <button class="number">0</button>
             <button class="number">.</button>
-            <button class="equal-sign">=</button>
-            <button>+</button>
+            <button id="equal-sign">=</button>
+            <button class="operator" id="plus">+</button>
         </div>
     </div>
+    <script src="calculator.js"></script>
 </body>
 
 </html>
